tests/parsing/fail/pragma_between_decl.circom
// TODO: pretify message

template T() {
}

pragma circom 1.0.0;

component main = T();
